--- a/Monopoly.GameField/Monopoly.GameField.csproj
+++ b/Monopoly.GameField/Monopoly.GameField.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AC4852DB-6D89-4208-A1C3-4838CD4B24A8}</ProjectGuid>
+    <ProjectGuid>{FFC554A9-0207-4A31-8D6F-305BAD4BD4E7}</ProjectGuid>
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ModuleA</RootNamespace>
-    <AssemblyName>ModuleA</AssemblyName>
+    <RootNamespace>Monopoly.GameField</RootNamespace>
+    <AssemblyName>Monopoly.GameField</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -49,7 +49,9 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ModuleAModule.cs" />
+    <Compile Include="GameFieldModule.cs" />
+    <Compile Include="Helpers\CardTemplateSelector.cs" />
+    <Compile Include="Helpers\ColorToSolidBrushConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -63,9 +65,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="ViewModels\ViewAViewModel.cs" />
-    <Compile Include="Views\ViewA.xaml.cs">
-      <DependentUpon>ViewA.xaml</DependentUpon>
+    <Compile Include="ViewModels\CardViewModel.cs" />
+    <Compile Include="ViewModels\FieldViewModel.cs" />
+    <Compile Include="Views\Field.xaml.cs">
+      <DependentUpon>Field.xaml</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -77,12 +80,11 @@
     </None>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Page Include="Views\ViewA.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <ProjectReference Include="..\Monopoly.Model\Monopoly.Model.csproj">
+      <Project>{ed5b866a-efb3-4646-917a-69329f1d2e75}</Project>
+      <Name>Monopoly.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CommonServiceLocator">
@@ -98,12 +100,20 @@
     <PackageReference Include="Unity">
       <Version>5.8.13</Version>
     </PackageReference>
-    <PackageReference Include="Unity.Abstractions">
-      <Version>3.3.1</Version>
-    </PackageReference>
     <PackageReference Include="Unity.Container">
       <Version>5.8.13</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Page Include="Styles\AbstractCardTemplate.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\Field.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
