--- a/Monopoly/App.config
+++ b/Monopoly/App.config
@@ -6,6 +6,6 @@
   <startup>
   </startup>
   <modules>
-    <module assemblyFile="Monopoly.BaseModel.dll" moduleType="Monopoly.BaseModel.BaseModelModule, Monopoly.BaseModel, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" moduleName="Monopoly.BaseModel" startupLoaded="True" />
+    <module assemblyFile="Monopoly.GameField.dll" moduleType="Monopoly.GameField.GameFieldModule, Monopoly.GameField, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" moduleName="Monopoly.GameField" startupLoaded="True" />
   </modules>
 </configuration>
