Some first player view and model support

--- a/Monopoly/App.config
+++ b/Monopoly/App.config
@@ -7,5 +7,6 @@
   </startup>
   <modules>
     <module assemblyFile="Monopoly.GameField.dll" moduleType="Monopoly.GameField.GameFieldModule, Monopoly.GameField, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" moduleName="Monopoly.GameField" startupLoaded="True" />
+    <module assemblyFile="Monopoly.UserField.dll" moduleType="Monopoly.UserField.UserFieldModule, Monopoly.UserField, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" moduleName="Monopoly.UserField" startupLoaded="True" />
   </modules>
 </configuration>
