--- a/Monopoly.GameField/Monopoly.GameField.csproj
+++ b/Monopoly.GameField/Monopoly.GameField.csproj
@@ -51,7 +51,8 @@
   <ItemGroup>
     <Compile Include="GameFieldModule.cs" />
     <Compile Include="Helpers\CardTemplateSelector.cs" />
-    <Compile Include="Helpers\ColorToSolidBrushConverter.cs" />
+    <Compile Include="Helpers\PlayerTemplateSelector.cs" />
+    <Compile Include="Helpers\PlayerViewModelBehavior.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -65,7 +66,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="ViewModels\CardViewModel.cs" />
     <Compile Include="ViewModels\FieldViewModel.cs" />
     <Compile Include="Views\Field.xaml.cs">
       <DependentUpon>Field.xaml</DependentUpon>
@@ -87,18 +87,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MahApps.Metro">
-      <Version>2.0.0-alpha0186</Version>
-    </PackageReference>
-    <PackageReference Include="Prism.Unity">
-      <Version>7.2.0.708-pre</Version>
-    </PackageReference>
-    <PackageReference Include="Prism.Wpf">
-      <Version>7.2.0.708-pre</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
     <Page Include="Styles\AbstractCardTemplate.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Styles\PlayerTemplates.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -106,6 +99,17 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MahApps.Metro">
+      <Version>2.0.0-alpha0186</Version>
+    </PackageReference>
+    <PackageReference Include="MahApps.Metro.IconPacks">
+      <Version>3.0.0-alpha0096</Version>
+    </PackageReference>
+    <PackageReference Include="Prism.Unity">
+      <Version>7.2.0.708-pre</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
