New type of cards - train stations

--- a/Monopoly.UserField/Monopoly.UserField.csproj
+++ b/Monopoly.UserField/Monopoly.UserField.csproj
@@ -49,6 +49,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\AnimatedTextContainerBehavior.cs" />
     <Compile Include="Helpers\PlayerPreviewBehavior.cs" />
     <Compile Include="UserFieldModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
