--- a/Monopoly/Monopoly.csproj
+++ b/Monopoly/Monopoly.csproj
@@ -59,7 +59,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Dialogs\AuctionDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Dialogs\BuyOrAuctionDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\BetsTemplates.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -75,11 +83,15 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Dialogs\AuctionDialog.xaml.cs">
+      <DependentUpon>AuctionDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Dialogs\AuctionDialogViewModel.cs" />
     <Compile Include="Dialogs\BuyOrAuctionDialog.xaml.cs">
       <DependentUpon>BuyOrAuctionDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Dialogs\BuyOrAuctionDialogViewModel.cs" />
-    <Compile Include="Dialogs\DialogResults.cs" />
+    <Compile Include="Dialogs\BuyOrAuctionDialogResults.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
