--- a/Monopoly.Model/Monopoly.Model.csproj
+++ b/Monopoly.Model/Monopoly.Model.csproj
@@ -91,14 +91,10 @@
     <Compile Include="Abstract\AbstractCard.cs" />
     <Compile Include="Abstract\AbstractPlayer.cs" />
     <Compile Include="Events\Events.cs" />
-    <Compile Include="Helpers\CardOrientationToDockConverter.cs" />
-    <Compile Include="Helpers\CardOrientationToHorizontalAlignment.cs" />
-    <Compile Include="Helpers\CardOrientationToLabelHeight.cs" />
-    <Compile Include="Helpers\CardOrientationToLabelWidth.cs" />
-    <Compile Include="Helpers\CardOrientationToVerticalAlignment.cs" />
-    <Compile Include="Helpers\CardOrientationToXTranslateConverter.cs" />
-    <Compile Include="Helpers\CardOrientationToYTranslateConverter.cs" />
+    <Compile Include="Helpers\CardOrientationToProperties.cs" />
+    <Compile Include="Helpers\CardTemplateSelector.cs" />
     <Compile Include="Helpers\ColorToSolidBrushConverter.cs" />
+    <Compile Include="Helpers\IntValueIncrementConverter.cs" />
     <Compile Include="Images\DefaultImagesLocator.cs" />
     <Compile Include="Interfaces\ICard.cs" />
     <Compile Include="Interfaces\ICardGroup.cs" />
@@ -108,10 +104,13 @@
     <Compile Include="Interfaces\IPlayer.cs" />
     <Compile Include="Interfaces\IPlayerProvider.cs" />
     <Compile Include="Interfaces\ITaxGroup.cs" />
-    <Compile Include="Models\CardGroup.cs" />
+    <Compile Include="Models\StationCardGroup.cs" />
+    <Compile Include="Models\TownCardGroup.cs" />
     <Compile Include="Models\GameManager.cs" />
     <Compile Include="Models\LocalPlayer.cs" />
     <Compile Include="Models\MockPlayerProvider.cs" />
+    <Compile Include="Models\PlayersBet.cs" />
+    <Compile Include="Models\StationCard.cs" />
     <Compile Include="Models\TaxGroup.cs" />
     <Compile Include="Models\TestDiceProvider.cs" />
     <Compile Include="Models\TownCard.cs" />
