--- a/Monopoly.Model/Monopoly.Model.csproj
+++ b/Monopoly.Model/Monopoly.Model.csproj
@@ -90,12 +90,14 @@
   <ItemGroup>
     <Compile Include="Abstract\AbstractCard.cs" />
     <Compile Include="Abstract\AbstractPlayer.cs" />
+    <Compile Include="Abstract\AbstractRealtyCard.cs" />
     <Compile Include="Events\Events.cs" />
     <Compile Include="Helpers\CardOrientationToProperties.cs" />
     <Compile Include="Helpers\CardTemplateSelector.cs" />
     <Compile Include="Helpers\ColorToSolidBrushConverter.cs" />
     <Compile Include="Helpers\IntValueIncrementConverter.cs" />
     <Compile Include="Images\DefaultImagesLocator.cs" />
+    <Compile Include="Interfaces\IActionProvider.cs" />
     <Compile Include="Interfaces\ICard.cs" />
     <Compile Include="Interfaces\ICardGroup.cs" />
     <Compile Include="Interfaces\ICardLocator.cs" />
@@ -105,7 +107,10 @@
     <Compile Include="Interfaces\IPlayer.cs" />
     <Compile Include="Interfaces\IPlayerProvider.cs" />
     <Compile Include="Interfaces\ITaxGroup.cs" />
+    <Compile Include="Models\ActionProvider.cs" />
+    <Compile Include="Models\EventCard.cs" />
     <Compile Include="Models\ExchangeManager.cs" />
+    <Compile Include="Models\GameAction.cs" />
     <Compile Include="Models\StationCardGroup.cs" />
     <Compile Include="Models\TownCardGroup.cs" />
     <Compile Include="Models\GameManager.cs" />
@@ -169,6 +174,24 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Chips\coffe-cup-yellow.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Events\default.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Events\start.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Events\chest.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Events\tax.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Events\luck.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Events\luckwheel.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
